# WisentCpp

./: .clang-format  .cmake-format  .gitignore  CMakeLists.txt  README.md  build_server.sh  temp_test_file.txt  test_build.sh
.github/workflows/: azure-static-web-apps-ashy-sea-07eaf0910.yml  azure-static-web-apps-lemon-forest-06039d903.yml
Benchmarks/: benchmark.sh
Benchmarks/Compression/: CMakeLists.txt  benchmark.cpp  config.hpp  utilities.cpp  utilities.hpp
Benchmarks/ParquetFileSize/: parquet.py
Benchmarks/WisentCompressor/: CMakeLists.txt  ITTNotify.hpp  benchmark.cpp  config.hpp  utilities.cpp  utilities.hpp
Benchmarks/WisentFileSize/: CMakeLists.txt  benchmark.cpp  config.hpp  utilities.cpp  utilities.hpp
Data/opsd-weather/: datapackage.json  weather_data.csv
Data/owid-deaths/: datapackage.json
Data/tpch/scripts/: generate_nested_data.py  generate_plain_data.sh  generate_plain_data_scaled.sh
Documentation/Interim report/: main.tex  report.tex  titlepage.tex
Documentation/Interim report/Bibliography/: references.bib
Documentation/Reflection/: Reflection.tex  main.tex
Include/: json.h
Misc/LZW/test/: compressed.txt  original.txt
Misc/Tests/: run-unit-tests.sh
Misc/Tests/Python/: WisentDeserializer.py
Misc/Tests/UnitTests/: CMakeLists.txt  TestBsonSerializer.cpp  TestCompression.cpp  TestCsvLoading.cpp  TestMockSharedMemorySegment.cpp  TestWisentCompressor.cpp  TestWisentSerializer.cpp
Misc/Tests/UnitTests/helpers/: MockSharedMemorySegment.cpp  unitTestHelpers.cpp  unitTestHelpers.hpp
Misc/Wisent-standalone/: CMakeLists.txt  Wisent.hpp  WisentHandlers.cpp  compile-wasm.sh
Misc/Zstd-Compression/: FSE.cs  Huffman.cs  LZ77.cs  LZW.cs
Misc/client-app/: README.md  next.config.ts  package-lock.json  package.json
Misc/client-app/app/: page.tsx
Misc/client-app/app/api/add/: route.ts
Misc/client-app/app/api/serialize/: route.ts
Misc/client-app/public/wasm/: wisent.js
Misc/pyarrow/: .gitignore  parquet.py
Source/: BsonSerializer.cpp  CsvLoading.hpp  HuffmanHelpers.h  SharedMemorySegment.cpp  SharedMemorySegment.hpp  WisentHelpers.h  WisentSerializer.cpp  WisentSerializer.h  WisentSerializer.hpp  WisentServer.cpp
Source/BsonSerializer/: BsonSerializer.cpp
Source/WisentParser/: WisentParser.cpp  WisentParser.hpp
Source/WisentSerializer/: WisentSerializer.hpp
Source/client-app/: README.md  package.json
Source/client-app/src/: App.js
Src/: ServerHelpers.cpp  ServerHelpers.hpp  WisentServer.cpp
Src/BsonSerializer/: BsonSerializer.cpp  BsonSerializer.hpp
Src/CompressionHelpers/: FiniteStateEntropy.cpp  FiniteStateEntropy.hpp  Huffman.cpp  Huffman.hpp  HuffmanHelper.h  LZ77.cpp  LZ77.hpp
Src/Helpers/: CsvLoading.hpp  ISharedMemory.hpp  ISharedMemorySegment.hpp  Result.hpp  SharedMemorySegment.cpp  SharedMemorySegment.hpp
Src/Helpers/BossHelpers/: BossEngine.cpp  BossEngine.hpp  BossExpression.hpp
Src/Helpers/CompressionHelpers/: Algorithms.cpp  Algorithms.hpp  BitPacking.cpp  BitPacking.hpp  Delta.cpp  Delta.hpp  FSE.cpp  FSE.hpp  FSE_simplified.cpp  FiniteStateEntropy.cpp  FiniteStateEntropy.hpp  Huffman .cpp  Huffman.cpp  Huffman.hpp  LZ77.cpp  LZ77.hpp  RLE.cpp  RLE.hpp
Src/Helpers/WisentHelpers/: BossToPortableBoss.hpp  JsonToWisent.hpp  WisentHelpers.hpp
Src/WisentCompressor/: BossCompressor.cpp  BossCompressor.hpp  CompressionPipeline.hpp  FiniteStateEntropy.cpp  FiniteStateEntropy.hpp  Huffman.cpp  LZ77.cpp  LZ77.hpp  WisentCompressor.cpp  WisentCompressor.hpp
Src/WisentCompressor/BossHelpers/: BossCompressedExpression.hpp
Src/WisentCompressor/CompressionHelpers/: Algorithms.cpp  Algorithms.hpp  Delta.cpp  Delta.hpp  Huffman.cpp  RLE.hpp
Src/WisentParser/: WisentParser.cpp  WisentParser.hpp
Src/WisentSerializer/: BossSerializer.cpp  BossSerializer.hpp  JsonToWisent.hpp  WisentHelpers.h  WisentHelpers.hpp  WisentSerializer.cpp  WisentSerializer.h  WisentSerializer.hpp
Src/WisentSerializer/BossHelpers/: BossSerializedExpression.hpp  BossSerializer.cpp  BossSerializer.hpp  BossSerializerHelpers.hpp
Test/Basic/: Test.cpp
Test/Python/: Aggregation.py
Tests/Python/: Aggregation.py  WisentDeserializer.py
Tests/UnitTests/: CMakeLists.txt  GTestMain.cpp  TestBsonSerializer.cpp  TestCompression.cpp  TestCsvLoading.cpp  TestMockSharedMemorySegment.cpp  TestSharedMemorySegment.cpp  TestWisentCompressor.cpp  TestWisentSerializer.cpp
Tests/UnitTests/helpers/: MockSharedMemorySegment.cpp  unitTestHelpers.cpp  unitTestHelpers.hpp
client-app/: package-lock.json
